<resources>
    <string name="app_name">PlazaPalm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_error_occured">Oops! Something went wrong</string>
    <string name="your_device_offline">You are offline.</string>
    <string name="log_out">Log Out Successfully Done</string>
    <string name="add_photo_type">addPhotos</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="google_places_api">AIzaSyDkQa8B4Cyv_magxXR3A8dN_UJWRo9zmPk</string>
    <string name="google_map_api_key">com.google.android.geo.API_KEY</string>
    <string name="user_name">User Name</string>
    <string name="take_photo">Take photo</string>
    <string name="photo_library">Photo library</string>
    <string name="post">Post</string>
    <string name="last_name">Last Name</string>
    <string name="haircut">Haircut</string>
    <string name="hair_style">Hair Style</string>
    <string name="save">Save</string>
    <string name="choose_categeory">Choose categeory</string>
    <string name="choose">Choose Color</string>
    <string name="search_for_location">Search for location</string>
    <string name="thank_you">Thank You</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_n_the_profile">Are you sure you want to delete \n the profile?</string>
    <string name="description_2">Description 2</string>
    <string name="description_3">Description 3</string>
    <string name="description2">Description2</string>
    <string name="submit">Submit</string>
    <string name="you_selected">You Selected</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="signing_up_as_a_business">Signing up as a business?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addtofav">Add to Favorites</string>
    <string name="removefromFav">Remove from Favorites</string>
    <string name="background_color">Background Color</string>
    <string name="color">Color</string>
    <string name="canecl">Cancel</string>
    <string name="reset_all">Reset All</string>
    <string name="more_colors">More Colors</string>
    <string name="colors">Color</string>
    <string name="colorss">Colors</string>
    <string name="opacity">Opacity</string>
    <string name="inter_regular">Inter Regular</string>
    <string name="font_sample">Font Sample</string>
    <string name="add_new_question">Add New Question</string>
    <string name="space"></string>
    <string name="no_questions_added_yet">No questions added yet</string>
    <string name="no_favorites_yet">There are no favorites yet!!</string>
    <string name="logout">Logout</string>
    <string name="enter_code">Enter code</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="deserts_and_drinks">Deserts and Drinks</string>

    //10-01-2023 Changes
    <string name="upload_image">Upload Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="take_video">Take Video</string>

    <string name="lower_name">Lower Name</string>
    <string name="top_name">Top Name</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="_25_miles">25 Miles</string>
    <string name="view_profile">View Profile</string>
    <string name="nodata_found">No Data Found</string>
    <string name="booking_txt">Book</string>
    <string name="calendar">Calendar</string>
    <string name="testing_nprofile">Testing\nProfile</string>
    <string name="type_here">Type here..</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="top_text">Top Text</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="decline">Decline</string>
    <string name="question_1">Question 1</string>
    <string name="verify">Verify</string>
    <string name="privacy_title">When you use our services, you’re trusting us with your information. We understand that this is a big responsibility and we work hard to protect your information and put you in control.</string>
    <string name="terms_conditions_title">What’s covered in these terms
    We know it’s tempting to skip these Terms of Service, but it’s important to establish what you can expect from us as you use Google services, and what we expect from you.</string>
    <string name="terms_conditions">These Terms of Service reflect the way that Google’s business works, the laws that apply to our company, and certain things that we’ve always believed to be true. As a result, these Terms of Service help define Google’s relationship with you as you interact with our services. For example, these terms include the following topic headings:

What you can expect from us, which describes how we provide and develop our services
What we expect from you, which establishes certain rules for using our services
Content in Google services, which describes the intellectual property rights to the content that you find in our services – whether that content belongs to you, Google or others
In case of problems or disagreements, which describes other legal rights that you have, and what to expect in case someone violates these terms.
Understanding these terms is important because, by using our services, you’re agreeing to these terms.

Besides these terms, we also publish a Privacy Policy. Although it’s not part of these terms, we encourage you to read it to better understand how you can update, manage, export and delete your information.

Terms
Service provider
Google services are provided by, and you’re contracting with:

Google LLC
organised under the laws of the State of Delaware, USA, and operating under the laws of the USA

1600 Amphitheatre Parkway
Mountain View, California 94043
USA

Age requirements
If you’re under the age required to manage your own Google Account, you must have your parent or legal guardian’s permission to use a Google Account. Please ask your parent or legal guardian to read these terms with you.

If you’re a parent or legal guardian, and you allow your child to use the services, then these terms apply to you and you’re responsible for your child’s activity on the services.

Some Google services have additional age requirements as described in their service-specific additional terms and policies.

</string>
    <string name="privacy_policy">This Privacy Policy is meant to help you understand what information we collect, why we collect it and how you can update, manage, export and delete your information.


Privacy Check-Up

Looking to change your privacy settings?

Take the Privacy Check-Up
       /n We build a range of services that help millions of people daily to explore and interact with the world in new ways. Our services include:

Google apps, sites and devices, such as Search, YouTube and Google Home
Platforms such as the Chrome browser and Android operating system
Products that are integrated into third-party apps and sites, like ads, analytics and embedded Google Maps
        /n You can use our services in a variety of ways to manage your privacy. For example, you can sign up for a Google Account if you want to create and manage content like emails and photos, or see more relevant search results. And you can use many Google services when you’re signed out or without creating an account at all, like searching on Google or watching YouTube videos. You can also choose to browse the web in a private mode, like Chrome Incognito mode. And across our services, you can adjust your privacy settings to control what we collect and how your information is used.

To help explain things as clearly as possible, we’ve added examples, explanatory videos and definitions for key terms. And if you have any questions about this Privacy Policy, you can contact us.
        /n We want you to understand the types of information we collect as you use our services

We collect information to provide better services to all our users – from figuring out basic stuff such as which language you speak, to more complex things like which ads you’ll find most useful, the people who matter most to you online or which YouTube videos you might like. The information Google collects, and how that information is used, depends on how you use our services and how you manage your privacy controls.

When you’re not signed in to a Google Account, we store the information that we collect with unique identifiers tied to the browser, application or device that you’re using. This allows us to do things like maintain your preferences across browsing sessions, such as your preferred language or whether to show you more relevant search results or ads based on your activity.

When you’re signed in, we also collect information that we store with your Google Account, which we treat as personal information.


    </string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
<string name="new_block_text">Tap here to unblock</string>
    <string name="no_data_found">No Data Found</string>
</resources>